--- a/.github/workflows/textlint.yml
+++ b/.github/workflows/textlint.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
     paths:
-      - '**.md'
+      - "**.md"
 
 jobs:
   textlint:
@@ -31,4 +31,4 @@ jobs:
 
       - name: Run textlint
         run: |
-          pnpm run lint
+          pnpm run textlint
